--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-node_modules
+# Dependencies
+node_modules/
+/frontend/node_modules/
+/backend/node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.development
+.env.test
+.env.production
