--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,81 @@
 node_modules/
 /frontend/node_modules/
 /backend/node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production builds
+build/
+dist/
+/frontend/build/
 
 # Environment variables
 .env
 .env.local
 .env.development
+.env.development.local
 .env.test
+.env.test.local
 .env.production
+.env.production.local
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Upload directories
+uploads/
+backend/uploads/resumes/*
+!backend/uploads/resumes/.gitkeep
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Test files
+test-results/
+coverage/
+
+# Temporary files
+tmp/
+temp/
+
+# Test files
+testLogin.js
